# Dust

./: .gitignore  CMakeLists.txt  README.md  grammar.ebnf  language.txt  main.dpp  main1.c  main2.c  main3.c  main_ast.txt  main_tokens.txt
include/: ast.h  dict.h  fs.h  interpreter.h  iterator.h  lexer.h  list.h  parser.h  print_pretty.h  std_functions.h  string_dup.h  tree.h
src/: ast.c  dict.c  fs.c  interpreter.c  lexer.c  list.c  parser.c  print_pretty.c  std_functions.c  string_buffer.c  string_bup.c  tree.c
tests/: main1.c  main2.c  main3.c
